# ChangeLog for dev-python/py-notify
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/py-notify/ChangeLog,v 1.3 2012/02/21 08:43:46 patrick Exp $

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org> py-notify-0.2.1.ebuild,
  py-notify-0.3.1.ebuild:
  Restricting jython

*py-notify-0.3.1 (13 Sep 2011)

  13 Sep 2011; Markos Chandras <hwoarang@gentoo.org> +py-notify-0.3.1.ebuild:
  Version bump

*py-notify-0.2.1 (20 Aug 2010)

  20 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  +py-notify-0.2.1.ebuild, +metadata.xml:
  Moved from sunrise overlay. Bug #323537. Thanks to Maxim
  <kolmax94@gmail.com> for the initial ebuild
