@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST py-notify-0.2.1.tar.gz 143167 SHA256 160c3244c2699203d12cada7af27ed0a1d4e40026215c22e6dae0cb34bb43100 SHA512 61346cca5a6d12f679e40bb385a7c4a520152d313d4ac63b1921d6389bc5af143a768ed26453a2a308aead8df1a5fd1d3dbd409feb3c0ca70a80a5a6bb555e57 WHIRLPOOL acb3add93c7d34af2ecf47fd0a83925643bbaa2d5148c30a139ae198786bf0f9188cecf27e60cd740ad321a7f04ee891fdd1ee49e7a76c8e044c030465b86368
 DIST py-notify-0.3.1.tar.gz 144954 SHA256 91f4fd2822403b96037608c0a05e814890edd17601570ae3e96359877320193c SHA512 16d874e6e265edabffe2200484566823251a0a395e979657829a7facc419ec6e21589f97f1675556b48c67ab6b93ded7325d57c8de29a4216211a8c37a3d9075 WHIRLPOOL aedc39f7d71fd08ad83bd90b73a6b28b9253e3f383bc1d146c8d2b5562899a5cd08037c00df8164645acf078ad241c55c89e9753690948c6602dad7d26835b87
 EBUILD py-notify-0.2.1.ebuild 573 SHA256 920144a9bbd51919a18a4f8d315885d4c89ea51c169e6e6bd0a95bf8f391c464 SHA512 2d1ee13c1119f207c369bee1330f9285db29cd5a8e3a600a55e2ad3f8d4a7d00e1102b1d17e0251653d10882fae7abd327317e9013ec3a1d13594dea81b8c0d4 WHIRLPOOL da6b88338c7f2d947e722208f339abc1bde1d6141d00476797205eafc73682937ff95e446b2fe2da0c4eaa0510c3e174e91c4bb2d70d8ace756a067be049fea6
-EBUILD py-notify-0.3.1.ebuild 573 SHA256 85a10ec3db3b92fa419b97684fcb87177865fd233bc654216bdc6438f4f65770 SHA512 1348f034db21be749a93cb50612db3ebdff40800f715953db7fe885e3da4ecb5e135ff29ef0261f84a0c19f91092a8f6db795fda859679b9ff8fd563694ede08 WHIRLPOOL 5c11d31508e11d24d1a32deb3e0bda78e0eb6082c4dfbf060ba9014c3eee6791fcf545488e5011c07af43b28cc58c6a8fab2e5f77686ae2ad04345da4dba34ce
-MISC ChangeLog 695 SHA256 9e4391b0a89faad87052d1430a35e7b84aaebe2c9c0a43bb6afc7a29ded3c7ac SHA512 ccfb4166f3126044482e24142f54fd5aaeba6dfa6960707ee2f0bdaf0a728a36b078b9c32fb5bf5607c39165e8cc748ed9fbf045b3b710041ca5048816b810f2 WHIRLPOOL 02b51452c8fb9b7bf13a0f0661e8f8d451d7ff0cc719e153098914051d0b71819bbbdda681e8ddbee69417aad3d7f652d168e7d2e6b22e940775b35f0d353e05
+EBUILD py-notify-0.3.1-r1.ebuild 708 SHA256 9243c060690ae3519c99238c7a9e36d315b5b1c2b31a73fe7ae65978b6ea4bf7 SHA512 3f5edbdc1439f4dbc14c9d651bd3e1ecaf7e291a272680f365f200564828275368d30c494946c197a644ae500e8f673f50de4000c6d05aa04e5e4c65e0e19e15 WHIRLPOOL aa38fc63a1463767bb71e2556da5e6bc846328f5bf1a3320d1dbf80688a6d98a09a8a213da58975a25f77d177a6b4ac8690cf9e6aaa15bac6c6ca082b4f31784
+MISC ChangeLog 922 SHA256 59a675def555dfce7281525fa8cd4d8e695bd2fefa535ca881eebb16bf488b1a SHA512 c921a8f8df3fbb9d3a264e027174c946e5b4d9d90f4137c3354403f920c70cc4f0db3031837a70f5dc8a49774dc04956b8de787e3f0a02118aa3dd62601997ee WHIRLPOOL 625ed7d8e71fe1f4b282148186aa05f007cebeae9b03b6111ccc93fb8905d0b2efff351784846f28899d4415efb10a64ef561567510b7ce2a80856314ed256fe
 MISC metadata.xml 162 SHA256 16ffd53ada09d3888873e96fbb35cf8e7de89caa3a7132de7fe286fcbe42f8e5 SHA512 f415747a47805357c1cbd26e67e88d2bcada37f1a13e390eaa1aa33b096b413391cd4bad11f8ecb7b4345a283cd39faab77404110f6fd5ae124d1479064e90d0 WHIRLPOOL 24c236ada1cf12eeebf47769d907ce13e5ed2cbcd2d52ee2c8b0247d098dffb4db8c07db36fb4a4462720206f7a38b44347c8ae68718761f1bab67e6810cabe3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlR/5fAACgkQso7CE7gHKw2aHwCgqAqd4tRw+utAfPSiFrT2h6uU
+8lUAoIOGbSaGUfGPLsTEJ3SQUceNtr35
+=MnGd
+-----END PGP SIGNATURE-----
