@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND==dev-lang/python-2*
-DESCRIPTION=Tools for implementing the Observer programming pattern in Python
-EAPI=2
-HOMEPAGE=http://home.gna.org/py-notify
-KEYWORDS=~amd64 ~x86
-LICENSE=LGPL-2.1
-RDEPEND==dev-lang/python-2*
-SLOT=0
-SRC_URI=http://download.gna.org/py-notify/py-notify-0.3.1.tar.gz
-_eclasses_=distutils	92e738ea29389cb3f34778d7a349ac71	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=869b98bef69a7358539c200a70ef3489
