@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile prepare
-DEPEND=dev-lang/perl
-DESCRIPTION=A tool allowing incremental and recursive imap transfer from one mailbox to another
-EAPI=5
-HOMEPAGE=http://ks.lamiral.info/imapsync/
-KEYWORDS=amd64 ppc x86
-LICENSE=WTFPL-2
-RDEPEND=dev-lang/perl dev-perl/Digest-HMAC dev-perl/IO-Socket-SSL dev-perl/Mail-IMAPClient dev-perl/TermReadKey virtual/perl-Digest-MD5 virtual/perl-MIME-Base64
-RESTRICT=test
-SLOT=0
-SRC_URI=https://fedorahosted.org/released/imapsync/imapsync-1.567.tgz
-_md5_=01be7573d0ed62a0a5be9796319a1059
