@@ -1,24 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST imapsync-1.567.tgz 848206 SHA256 ea266023adc1c1ee0dab2605865c17ca78353504869415924fc6c20fea798c88 SHA512 a0107c0ae9fa05d02d0cff9088abcd9b21fad71cfe6a9f4ce1d828910f0723018a40888538212fd3350baadf0cd9d75b78eedcd8a562dff611fe0956008019bd WHIRLPOOL 4b4052dc724ca4a51b0876c6347201417e63acf2fde053ba0557bcb1cc661b1e4ecb4db6d5865d09467223e8a412b78eb16f8d107b1bd94548d0836601f9cf2a
-DIST imapsync-1.584.tgz 844115 SHA256 6f5eefe7646b9d2c41f94d100ee60d390a090c45e41c244de45ac7c31efc25ae SHA512 8978cc999b9af38b8d135a226456f858e265e21b138990b926d8b569088ccafc035dba9426f1a7f0d1027ef5e4432eec9ad113d8eb18c00c199afa3fb803eebe WHIRLPOOL 8f70ebbd4a42d2e7d0e1798e8c245ae7de41e2304d6f0ed873028a28dfe07e07af984b010d0aa68a028ce2d207144186a88e182dc3dbf730b9ac9e8c984469fc
 DIST imapsync-1.592.tgz 906578 SHA256 dd359a5b871dd278fbb39ba0c087576e97af1d746c49a104bc00a533b463ab64 SHA512 3d41b28396d9b8bf83200b324b2e312c76ef88e42f4ff8993c8d697b18f321400d7a157b1fee2d3ad4eae11400dc2186a18528bde50e370d856eac1b09c28f68 WHIRLPOOL ab0783acc911dacf394e19c4b3bbcd0bcc6de55088e11846271a590ffd4d79935d2bcffbe601bd1e599dffd1df5d9ade0fc6578b9252d3363f81f3982e96ff34
 DIST imapsync-1.607.tgz 973467 SHA256 784331cfa6cc391751dcdc5290eba5d50bf3ddbe9b213f072b413941a3fe4f2a SHA512 2630d32683f74ec260d322d2d9f13fb30938c077275cd43cece392b43bbdf8989f8ff6df648d520b785a568bf5d6f45d43761bf4fb94649e210611224ad43841 WHIRLPOOL b2c089879a475aba14fec66912d024b1365e0b6c7bf56c3e4c291c3f5c96008ff302241d3a8675c82dc1fced36ca88a05b06054058c107edcfd7f73bac7e9544
-EBUILD imapsync-1.567.ebuild 816 SHA256 1d8a03dab815d6b6fc2ca39074b5113abeae32572cff01c2fcbbaca3291b35a2 SHA512 d78004c63deca9629cfdb7d4d1e7be2bce73a1f6310e5e57de966c6a7a81284023bf90ee0d0348e78870605d0fb8cc4b2d0ffa45203fb716d083a0806892a12a WHIRLPOOL 95278e40a06eba33cfaa26080555f622db9efbc8a04f71533cee4772978e26da681ce5982c183157677a0320c50567359abaffc451f75ef24d609f96aa550db6
-EBUILD imapsync-1.584-r1.ebuild 862 SHA256 c1ac0525be1401656350891cdd04f9ad4b68bc37157f7941ab45cf0cbbfb14ec SHA512 6d512fd445d0e6714a37c0170e0a78332ce4e27e36d27fc01cb9c83a02bdd9defa85a927be85e39ceeec0651fcc5fcfe5e6619951b90361aa78066a31339fbb3 WHIRLPOOL 50d620bc0037cc56288cdfa5aabb55b3b6fe77d765978b5641441b058acae4b739f960f7012b250183516d3bece8ff7994bd45c56b2f7d16fe164cf0721c6e18
 EBUILD imapsync-1.592-r1.ebuild 870 SHA256 05cd09c3783f6606d244853219f103ec2c75c9331d6bd71b0dc387a2d4b178dc SHA512 a002f5a42af3fa0effdd7c184b51cbde31a8c66277503319cc2afd169ce26a92e3e88d23209cf49260eb0d6feff0944b4cc0327a0289c4fc26d3a3d84faea83e WHIRLPOOL 66ff5dc42b444c3d4be5fab883726f3211dd4f3ad6f95cf98bfebbd8e876ee34aa6ed72f4edd8ae3977354f8fdcff323efabbe0fa1b04c54fd28fe9104caf096
 EBUILD imapsync-1.607.ebuild 876 SHA256 3a82312cb9edc543836b47744bc95e14ecd1f9048e4b907092c4d9cea0233b4b SHA512 df9c4850150ce1600db4ab1bbd63f81729b8b8eec0a2a45caffea7d767f40b459799650f07484409803c55818caf00123ff14f2053a1c1b767aea2410455c0b7 WHIRLPOOL 926e42c22e6a8025bf398f60639821a526ef052105926ff527457dc5aff540c813feee1d6ddf0c4e319e756d5b3202fbbcebc32971f5fa7b1df9f2b6bb300646
-MISC ChangeLog 13106 SHA256 4785af2af4e358f98d72885d31c96d02753affa82079379d65fc721b682269bf SHA512 0efd87ed3c727f06c0e2971000f5dc572d819e77bba11d538fc0fbefb93d5a6ad3e9473335f8bd04518cbf0993733e4341f2b615438fb8a25a2e2d46a1322112 WHIRLPOOL b8acc7c53e09e36e4cbd20091dd2fd201055222f8e03e58274d77aff7fa9bb9671a8cf3af70eb00ff1a804d569f55b64073b625778cfe218ea5e7694ee80c81e
+MISC ChangeLog 13223 SHA256 83d391c267d7808e60d6e1958ce8e5db1498e7e57931a6e99d46f33df9a3a7f6 SHA512 9444800fb6174fd730e53d403213388ea779742f24d6faeebd63b95eb87cc3afd57dd4a86a4a195d37f282dbbe1ce9191e6c1aae07ca792edfe01b481bec9393 WHIRLPOOL 6307f868cdceeb59831f2b22202b8fa491308081f33ae40dc4d7b86df7b45109a84d41dc3bfa7734cccefb677484cc521201acfb0e5046c102c6ba965bfc00d6
 MISC metadata.xml 162 SHA256 569031668e39895fb20829fb17a49a91a83e8f41b2195b0f04825c4340d2af6b SHA512 b706438a0eda682ad16d8e2217bd54d5fa9f8b305efc6e009d0bf523df159162afee0fae9107c5887e12bb64951bbee4c36c8f4744d008ba8fc2db4c01504fa2 WHIRLPOOL d1196dde03902f1b7eee5c0ad8e30243470e014ec8b6d56fe556125f636872345f0dec41e45f39fa14993db3db78a782efdcf26c3d50cdccd88f4f7c8b7dc67a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUf+E/AAoJEEqz6FtPBkyj2lUH/3iOi9TQ9oy3LRlMUP/LDdLw
-kcELatDyr4Fnekbrxjf/VK4gKD3TJYLvrBbH1FI8jUV7GsYn95rhtwDefdv/oehw
-BAFKE80Y6ckaJ2ESfftmrETmxn2POVQtzMHYnvW/sCwq4se4OkV+yAOwIu9d4woi
-Z9Bq5cJ4zKeeB60Hx3HiWKTYjoZmTxpSRFuFjWtFfL9zMGRFAMx8KtzmHEJkXF6H
-7YMOK8KWplVixIfAw1Bsm+iiwMuxb+cbNu18v+iI91f85fIzQ8dIr/XpSKfU7zIU
-+DDRNUX75oH+BWmqdFbplGeNt+SjuEeYVYDvC8LFE6XZm/Um96sjHpjXYn2L1fs=
-=tXxD
+iQEcBAEBCAAGBQJUf+OuAAoJEEqz6FtPBkyjieoIAIiTecJ1ETxD653IbBQGowYz
+NiObY7eibxIHGC4nVY6C+WxOPxDaRnB4XSNg4plqWVGsQDxIybrMR3+2kCqZXVFv
+PieSlVXG7VytDTlFhDCeBOQlvGrTJTCKpc7rXATxnMf8CeFbpyFmi2a/mp9e1ItY
+THnFTaDkhbm0Bc3iNnIjsoNBfuFi+Qr19D4SkWd+G5XG1WWA5xc6xNpw0CjytfQ6
+/B1Y1JBLTldcl+XdnPRf+xfi+zZ/7MlWxSi2vgFx9Rc/THi7J13HrGzhEmX3gkQh
+o2jl5bTO5ZDNsWTsZPp1ev3BLDqL0hJuVBjSylNMX4BJL/mapvwmktQzpnlm4rE=
+=3KEB
 -----END PGP SIGNATURE-----
