@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/imapsync
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/imapsync/ChangeLog,v 1.97 2014/12/04 04:21:10 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/imapsync/ChangeLog,v 1.98 2014/12/04 04:31:33 radhermit Exp $
+
+  04 Dec 2014; Tim Harder <radhermit@gentoo.org> -imapsync-1.567.ebuild,
+  -imapsync-1.584-r1.ebuild:
+  Remove old.
 
 *imapsync-1.607 (04 Dec 2014)
 
